5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1758_1183.log
== TEST (2019-05-28 10:22:07) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor: ")))
i=0
while(i<size(vet)):
	if(i<0):
		neg=array(eval(i))
		print(neg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:45:03) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor: ")))
i=0
p=0
while(i<size(vet)):
	if(vet[i]>=0):
		
		i=i+1
		p=p+1
r=zeros(p,dtype=int)
a=0
b=0
while(a<size(vet)):
	if(vet[a]>0):
		r[b]=n[a]
		b=b+1
		a=a+1
print(r)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:47:42) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor: ")))
i=0
p=0
while(i<size(vet)):
	if(vet[i]>=0):
		i=i+1
		p=p+1
r=zeros(p, dtype=int)
a=0
b=0
while(a<size(vet)):
	if(vet[a]>0):
		r[b]=n[a]
		b=b+1
		a=a+1
print(r)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:48:20) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor: ")))
i=0
p=0
while(i<size(vet)):
	if(vet[i]>=0):
		i=i+1
		p=p+1
r=zeros(p, dtype=int)
a=0
b=0
while(a<size(vet)):
	if(vet[a]>0):
		r[b]=vet[a]
		b=b+1
		a=a+1
		
print(r)


		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:48:30) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor: ")))
i=0
p=0
while(i<size(vet)):
	if(vet[i]>=0):
		i=i+1
		p=p+1
r=zeros(p, dtype=int)
a=0
b=0
while(a<size(vet)):
	if(vet[a]>0):
		r[b]=vet[a]
		b=b+1
		a=a+1
		
print(r)


		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:03:31) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor: ")))
i=0
n=0
while(i < size(vet)):
	if(vet[i]<0):
		n=n+1
	i=i+1
r=zeros(p, dtype=int)
a=0
b=0
while(a < size(vet)):
	if(vet[a]>0):
		r[b]=vet[a]
		b=b+1
	a=a+1
		
print(r)


		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:03:38) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor: ")))
i=0
n=0
while(i < size(vet)):
	if(vet[i]<0):
		n=n+1
	i=i+1
r=zeros(p, dtype=int)
a=0
b=0
while(a < size(vet)):
	if(vet[a]>0):
		r[b]=vet[a]
		b=b+1
	a=a+1
		
print(r)


		
	
-- EXECUTION TIME:
3.37219
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 9, in <module>
    r=zeros(p, dtype=int)
NameError: name 'p' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:03:41) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor: ")))
i=0
n=0
while(i < size(vet)):
	if(vet[i]<0):
		n=n+1
	i=i+1
r=zeros(p, dtype=int)
a=0
b=0
while(a < size(vet)):
	if(vet[a]>0):
		r[b]=vet[a]
		b=b+1
	a=a+1
		
print(r)


		
	
-- EXECUTION TIME:
3.65801
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 9, in <module>
    r=zeros(p, dtype=int)
NameError: name 'p' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:04:55) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor: ")))
i=0
n=0
while(i < size(vet)):
	if(vet[i]<0):
		n=n+1
	i=i+1
r=zeros(n, dtype=int)

vetor= vet-n
a=0
b=0
while(a < size(vet)):
	if(vet[a]>0):
		r[b]=vet[a]
		b=b+1
	a=a+1
		
print(r)


		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:04:58) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor: ")))
i=0
n=0
while(i < size(vet)):
	if(vet[i]<0):
		n=n+1
	i=i+1
r=zeros(n, dtype=int)

vetor= vet-n
a=0
b=0
while(a < size(vet)):
	if(vet[a]>0):
		r[b]=vet[a]
		b=b+1
	a=a+1
		
print(r)


		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:05:08) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor: ")))
i=0
n=0
while(i < size(vet)):
	if(vet[i]<0):
		n=n+1
	i=i+1
r=zeros(n, dtype=int)

vetor= vet-n
a=0
b=0
while(a < size(vet)):
	if(vet[a]>0):
		r[b]=vet[a]
		b=b+1
	a=a+1
		
print(r)


		
	
-- EXECUTION TIME:
5.0716
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
entre com o vetor: [1 0 0 0 0 0 0 0 0 0]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
entre com o vetor:
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
entre com o vetor:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:06:47) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor: ")))
i=0
n=0
while(i < size(vet)):
	if(vet[i]<0):
		n=n+1
	i=i+1
r=zeros(n, dtype=int)

vetor= size(vet)-n
a=0
b=0
while(a < size(vet)):
	if(vet[a]>0):
		vetor[b]=vet[a]
		b=b+1
	a=a+1
		
print(r)


		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:06:57) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor: ")))
i=0
n=0
while(i < size(vet)):
	if(vet[i]<0):
		n=n+1
	i=i+1
r=zeros(n, dtype=int)

vetor= size(vet)-n
a=0
b=0
while(a < size(vet)):
	if(vet[a]>0):
		vetor[b]=vet[a]
	b=b+1
	a=a+1
		
print(r)


		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:07:01) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor: ")))
i=0
n=0
while(i < size(vet)):
	if(vet[i]<0):
		n=n+1
	i=i+1
r=zeros(n, dtype=int)

vetor= size(vet)-n
a=0
b=0
while(a < size(vet)):
	if(vet[a]>0):
		vetor[b]=vet[a]
		b=b+1
	a=a+1
		
print(r)


		
	
-- EXECUTION TIME:
4.97297
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 16, in <module>
    vetor[b]=vet[a]
TypeError: 'int' object does not support item assignment

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:07:01) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor: ")))
i=0
n=0
while(i < size(vet)):
	if(vet[i]<0):
		n=n+1
	i=i+1
r=zeros(n, dtype=int)

vetor= size(vet)-n
a=0
b=0
while(a < size(vet)):
	if(vet[a]>0):
		vetor[b]=vet[a]
		b=b+1
	a=a+1
		
print(r)


		
	
-- EXECUTION TIME:
5.05531
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 16, in <module>
    vetor[b]=vet[a]
TypeError: 'int' object does not support item assignment

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:07:07) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor: ")))
i=0
n=0
while(i < size(vet)):
	if(vet[i]<0):
		n=n+1
	i=i+1
r=zeros(n, dtype=int)

vetor= size(vet)-n
a=0
b=0
while(a < size(vet)):
	if(vet[a]>0):
		vetor[b]=vet[a]
	b=b+1
	a=a+1
		
print(r)


		
	
-- EXECUTION TIME:
3.43836
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 16, in <module>
    vetor[b]=vet[a]
TypeError: 'int' object does not support item assignment

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:08:04) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor: ")))
i=0
n=0
while(i < size(vet)):
	if(vet[i]<0):
		n=n+1
	i=i+1
r=zeros(n, dtype=int)

vetor= size(vet)-size(r)
a=0
b=0
while(a < size(vet)):
	if(vet[a]>0):
		vetor[b]=vet[a]
	b=b+1
	a=a+1
		
print(r)


		
	
-- EXECUTION TIME:
4.62127
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 16, in <module>
    vetor[b]=vet[a]
TypeError: 'int' object does not support item assignment

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:08:05) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor: ")))
i=0
n=0
while(i < size(vet)):
	if(vet[i]<0):
		n=n+1
	i=i+1
r=zeros(n, dtype=int)

vetor= size(vet)-size(r)
a=0
b=0
while(a < size(vet)):
	if(vet[a]>0):
		vetor[b]=vet[a]
	b=b+1
	a=a+1
		
print(r)


		
	
-- EXECUTION TIME:
3.55285
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 16, in <module>
    vetor[b]=vet[a]
TypeError: 'int' object does not support item assignment

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:09:58) 
-- CODE:
from numpy import*
n=array(eval(input("entre com o vetor: ")))
i=0
p=0
while(i < size(n)):
	if(vet[i]>=0):
		p=p+1
	i=i+1
r=zeros(p, dtype=int)


a=0
b=0
while(a < size(n)):
	if(n[a]>0):
		r[b]=n[a]
		b=b+1
	a=a+1
		
print(r)


		
	
-- EXECUTION TIME:
3.58286
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 6, in <module>
    if(vet[i]>=0):
NameError: name 'vet' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:10:04) 
-- CODE:
from numpy import*
n=array(eval(input("entre com o vetor: ")))
i=0
p=0
while(i < size(n)):
	if(vet[i]>=0):
		p=p+1
	i=i+1
r=zeros(p, dtype=int)


a=0
b=0
while(a < size(n)):
	if(n[a]>0):
		r[b]=n[a]
		b=b+1
	a=a+1
		
print(r)


		
	
-- EXECUTION TIME:
3.80127
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 6, in <module>
    if(vet[i]>=0):
NameError: name 'vet' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:10:09) 
-- CODE:
from numpy import*
n=array(eval(input("entre com o vetor: ")))
i=0
p=0
while(i < size(n)):
	if(vet[i]>=0):
		p=p+1
	i=i+1
r=zeros(p, dtype=int)


a=0
b=0
while(a < size(n)):
	if(n[a]>0):
		r[b]=n[a]
		b=b+1
	a=a+1
		
print(r)


		
	
-- EXECUTION TIME:
5.54532
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 6, in <module>
    if(vet[i]>=0):
NameError: name 'vet' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:10:12) 
-- CODE:
from numpy import*
n=array(eval(input("entre com o vetor: ")))
i=0
p=0
while(i < size(n)):
	if(vet[i]>=0):
		p=p+1
	i=i+1
r=zeros(p, dtype=int)


a=0
b=0
while(a < size(n)):
	if(n[a]>0):
		r[b]=n[a]
		b=b+1
	a=a+1
		
print(r)


		
	
-- EXECUTION TIME:
5.55936
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 6, in <module>
    if(vet[i]>=0):
NameError: name 'vet' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:10:51) 
-- CODE:
from numpy import*
n=array(eval(input("entre com o vetor: ")))
i=0
p=0
while(i < size(n)):
	if(vet[i]>=0):
		p=p+1
	i=i+1
r=zeros(p, dtype=int)


a=0
b=0
while(a < size(n)):
	if(n[a]>0):
		r[b]=n[a]
		b=b+1
	a = a + 1
		
print(r)


		
	
-- EXECUTION TIME:
7.75657
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 6, in <module>
    if(vet[i]>=0):
NameError: name 'vet' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:11:01) 
-- CODE:
from numpy import*
n=array(eval(input("entre com o vetor: ")))
i=0
p=0
while(i < size(n)):
	if(vet[i]>=0):
		p=p+1
	i=i+1
r=zeros(p, dtype=int)


a=0
b=0
while(a < size(n)):
	if(n[a]>0):
		r[b]=n[a]
		b= b + 1
	a = a + 1
		
print(r)


		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:11:07) 
-- CODE:
from numpy import*
n=array(eval(input("entre com o vetor: ")))
i=0
p=0
while(i < size(n)):
	if(vet[i]>=0):
		p=p+1
	i=i+1
r=zeros(p, dtype=int)


a=0
b=0
while(a < size(n)):
	if(n[a]>0):
		r[b]=n[a]
		b= b + 1
	a = a + 1
		
print(r)


		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:11:22) 
-- CODE:
from numpy import*
n=array(eval(input("entre com o vetor: ")))
i=0
p=0
while(i < size(n)):
	if(vet[i]>=0):
		p=p+1
	i=i+1
r=zeros(p, dtype=int)


a=0
b=0
while(a < size(n)):
	if(n[a]>0):
		r[b]=n[a]
		b= b + 1
	a = a + 1
		
print(r)


		
	
-- EXECUTION TIME:
5.47598
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 6, in <module>
    if(vet[i]>=0):
NameError: name 'vet' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:12:05) 
-- CODE:
from numpy import*
n=array(eval(input("entre com o vetor: ")))
i=0
p=0
while(i < size(n)):
	if(n[i]>=0):
		p=p+1
	i=i+1
r=zeros(p, dtype=int)

a=0
b=0
while(a < size(n)):
	if(n[a]>0):
		r[b]=n[a]
		b= b + 1
	a = a + 1
		
print(r)


		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:12:05) 
-- CODE:
from numpy import*
n=array(eval(input("entre com o vetor: ")))
i=0
p=0
while(i < size(n)):
	if(n[i]>=0):
		p=p+1
	i=i+1
r=zeros(p, dtype=int)

a=0
b=0
while(a < size(n)):
	if(n[a]>0):
		r[b]=n[a]
		b= b + 1
	a = a + 1
		
print(r)


		
	
-- EXECUTION TIME:
3.24878
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:13:06) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor: ")))
i=0
p=0
while(i<size(vet)):
	if(vet[i]>=0):
		
		i=i+1
		p=p+1
r=zeros(p,dtype=int)
a=0
b=0
while(a<size(vet)):
	if(vet[a]>0):
		r[b]=n[a]
		b=b+1
		a=a+1
print(r)
		
	
-- EXECUTION TIME:
1688.47
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:13:07) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor: ")))
i=0
p=0
while(i<size(vet)):
	if(vet[i]>=0):
		
		i=i+1
		p=p+1
r=zeros(p,dtype=int)
a=0
b=0
while(a<size(vet)):
	if(vet[a]>0):
		r[b]=n[a]
		b=b+1
		a=a+1
print(r)
		
	
-- EXECUTION TIME:
1691.57
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:16:06) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor: ")))
i=0
p=0
while(i<size(vet)):
	if(vet[i]>=0):
		i=i+1
		p=p+1
r=zeros(p, dtype=int)
a=0
b=0
while(a<size(vet)):
	if(vet[a]>0):
		r[b]=n[a]
		b=b+1
		a=a+1
print(r)
		
	
-- EXECUTION TIME:
1769.71
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:17:03) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor: ")))
i=0
p=0
while(i<size(vet)):
	if(vet[i]>=0):
		i=i+1
		p=p+1
r=zeros(p, dtype=int)
a=0
b=0
while(a<size(vet)):
	if(vet[a]>0):
		r[b]=vet[a]
		b=b+1
		a=a+1
		
print(r)


		
	
-- EXECUTION TIME:
1719.59
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:17:03) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor: ")))
i=0
p=0
while(i < size(vet)):
	if(vet[i]>=0):
		i=i+1
		p=p+1
r=zeros(p, dtype=int)
a=0
b=0
while(a < size(vet)):
	if(vet[a]>0):
		r[b]=vet[a]
		b=b+1
		a=a+1
		
print(r)


		
	
-- EXECUTION TIME:
1616.25
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 12:35:15) 
-- CODE:
from numpy import*
n=array(eval(input("entre com o vetor: ")))
i=0
p=0
while(i < size(n)):
	if(n[i]>=0):
		p=p+1
	i=i+1
r=zeros(p, dtype=int)

a=0
b=0
while(a < size(n)):
	if(n[a]>0):
		r[b]=n[a]
		b= b + 1
	a = a + 1
		
print(r)


		
	
-- EXECUTION TIME:
0.41298
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:39:42) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor")))
i=0
s=size(vet)
v=zeros(s)
while(i<size(vet)):
	if(vet(i)>=0):
		vetp=v[i]
		
print(vetp)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:40:28) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor")))
i=0
s=size(vet)
v=zeros(s)
while(i<size(vet)):
	if(vet[i]>=0):
		vetp=v[i]
		
print(vetp)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:54:14) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor")))
i=0
r=size(vet)

while(i<size(vet)):
	if(vet[i]>=0):
		p=p+1
	i=i+1	
e=0
s=0
v=zeros(p,dtype=int)
while(e<size(v)):
	if(vet[e]>=0):
		v[s]=vet[s]
		s=s+1
	e=e+1


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:55:06) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor")))
i=0
p=0
while(i<size(vet)):
	if(vet[i]>=0):
		p=p+1
	i=i+1	
e=0
s=0
v=zeros(p,dtype=int)
while(e<size(v)):
	if(vet[e]>=0):
		v[s]=vet[s]
		s=s+1
	e=e+1
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:55:36) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor")))
i=0
p=0
while(i<size(vet)):
	if(vet[i]>=0):
		p=p+1
	i=i+1	
e=0
s=0
v=zeros(p,dtype=int)
while(e<size(v)):
	if(vet[e]>=0):
		v[s]=vet[e]
		s=s+1
	e=e+1
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:56:07) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor")))
i=0
p=0
while(i<size(vet)):
	if(vet[i]>=0):
		p=p+1
	i=i+1	
e=0
s=0
v=zeros(p,dtype=int)
while(e<size(v)):
	if(vet[e]>0):
		v[s]=vet[e]
		s=s+1
	e=e+1
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:57:04) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor")))
i=0
p=0
while(i<size(vet)):
	if(vet[i]>=0):
		p=p+1
	i=i+1	
e=0
s=0
v=zeros(p,dtype=int)
while(e<size(vet)):
	if(vet[e]>0):
		v[s]=vet[s]
		s=s+1
	e=e+1
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:57:50) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor")))
i=0
p=0
while(i<size(vet)):
	if(vet[i]>=0):
		p=p+1
	i=i+1	
e=0
s=0
v=zeros(p,dtype=int)
while(e<size(vet)):
	if(vet[e]>0):
		v[s]=vet[e]
		s=s+1
	e=e+1
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:57:58) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor")))
i=0
p=0
while(i<size(vet)):
	if(vet[i]>=0):
		p=p+1
	i=i+1	
e=0
s=0
v=zeros(p,dtype=int)
while(e<size(vet)):
	if(vet[e]>0):
		v[s]=vet[e]
		s=s+1
	e=e+1
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:58:02) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor")))
i=0
p=0
while(i<size(vet)):
	if(vet[i]>=0):
		p=p+1
	i=i+1	
e=0
s=0
v=zeros(p,dtype=int)
while(e<size(vet)):
	if(vet[e]>0):
		v[s]=vet[e]
		s=s+1
	e=e+1
print(v)

-- EXECUTION TIME:
0.369312
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:58:21) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor")))
i=0
p=0
while(i<size(vet)):
	if(vet[i]>=0):
		p=p+1
	i=i+1	
e=0
s=0
v=zeros(p,dtype=int)
while(e<size(v)):
	if(vet[e]>0):
		v[s]=vet[e]
		s=s+1
	e=e+1
print(v)

-- EXECUTION TIME:
0.381262
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[0]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 0]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14  0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:58:24) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor")))
i=0
p=0
while(i<size(vet)):
	if(vet[i]>=0):
		p=p+1
	i=i+1	
e=0
s=0
v=zeros(p,dtype=int)
while(e<size(v)):
	if(vet[e]>0):
		v[s]=vet[e]
		s=s+1
	e=e+1
print(v)

-- EXECUTION TIME:
0.42104
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[0]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 0]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14  0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:58:28) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor")))
i=0
p=0
while(i<size(vet)):
	if(vet[i]>=0):
		p=p+1
	i=i+1	
e=0
s=0
v=zeros(p,dtype=int)
while(e<size(vet)):
	if(vet[e]>0):
		v[s]=vet[e]
		s=s+1
	e=e+1
print(v)

-- EXECUTION TIME:
0.470006
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:59:09) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor")))
i=0
p=0
while(i<size(vet)):
	if(vet[i]>=0):
		p=p+1
	i=i+1	
e=0
s=0
v=zeros(p,dtype=int)
while(e<size(vet)):
	if(vet[e]>0):
		v[s]=vet[s]
		s=s+1
	e=e+1
print(v)

-- EXECUTION TIME:
0.604674
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[-1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[ 2 -1  3]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[-1 18 32 14]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:59:12) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor")))
i=0
p=0
while(i<size(vet)):
	if(vet[i]>=0):
		p=p+1
	i=i+1	
e=0
s=0
v=zeros(p,dtype=int)
while(e<size(vet)):
	if(vet[e]>0):
		v[s]=vet[s]
		s=s+1
	e=e+1
print(v)

-- EXECUTION TIME:
0.430622
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[-1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[ 2 -1  3]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[-1 18 32 14]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 01:07:29) 
-- CODE:
from numpy import*
vet=array(eval(input("entre com o vetor")))
i=0
p=0
while(i<size(vet)):
	if(vet[i]>=0):
		p=p+1
	i=i+1	
e=0
s=0
v=zeros(p,dtype=int)
while(e<size(vet)):
	if(vet[e]>0):
		v[s]=vet[e]
		s=s+1
	e=e+1
print(v)

-- EXECUTION TIME:
0.363831
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
